[gd_scene load_steps=2 format=3 uid="uid://bj8xfn2qxqn5p"]

[ext_resource type="Script" path="res://scripts/ui/options_menu.gd" id="1_options"]

[node name="OptionsMenu" type="CanvasLayer"]
script = ExtResource("1_options")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.15, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="TitleLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "OPÇÕES"
horizontal_alignment = 1

[node name="Spacer1" type="Control" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="MasterVolume" type="VBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="MasterLabel" type="Label" parent="CenterContainer/VBoxContainer/MasterVolume"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Volume Master: 100%"
horizontal_alignment = 1

[node name="MasterSlider" type="HSlider" parent="CenterContainer/VBoxContainer/MasterVolume"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
max_value = 100.0
step = 1.0
value = 100.0
tick_count = 11
ticks_on_borders = true

[node name="MusicVolume" type="VBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="MusicLabel" type="Label" parent="CenterContainer/VBoxContainer/MusicVolume"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Volume Música: 100%"
horizontal_alignment = 1

[node name="MusicSlider" type="HSlider" parent="CenterContainer/VBoxContainer/MusicVolume"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
max_value = 100.0
step = 1.0
value = 100.0
tick_count = 11
ticks_on_borders = true

[node name="SFXVolume" type="VBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="SFXLabel" type="Label" parent="CenterContainer/VBoxContainer/SFXVolume"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Volume SFX: 100%"
horizontal_alignment = 1

[node name="SFXSlider" type="HSlider" parent="CenterContainer/VBoxContainer/SFXVolume"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
max_value = 100.0
step = 1.0
value = 100.0
tick_count = 11
ticks_on_borders = true

[node name="Spacer2" type="Control" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="BackButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "VOLTAR"
